(executable
 (name mylib)
 (libraries ctypes ctypes.foreign lib uutf)
 (foreign_stubs
  (language c)
  (names mylib)
  (flags -I/home/wlee/.nvm/versions/node/v14.17.1/include/node))
 (ocamlopt_flags :standard -fPIC -runtime-variant _pic)
 (flags :standard -linkall)
 (modes shared_object))

(install
 (section lib)
 (files (mylib.so as libmylib.so) mylib.h))
